<resources>
    <string name="got_it">Entendido</string>
    <string name="app_name">Subgüey</string>
    <string name="title_activity_main">Mapa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="serverId">531713002016-hl2vlvitqa09cqnnqd3805afuqhaotla.apps.googleusercontent.com</string>
    <string name="title_activity_frame_gmap">Mapa</string>
    <string name="location_permission_denied">El permiso para localización ha sido denegado</string>
    <string name="permission_required_toast">Se requieren permisos de localización</string>
    <string name="permission_rationale_location">Esta aplicación requiere permisos para usar el GPS</string>

    <!-- Navigation drawer strings -->
    <string name="navigation_drawer_map">Mapa</string>
    <string name="navigation_drawer_lines_subway">Lineas metro</string>
    <string name="navigation_drawer_lines_metro_bus">Lineas metrobus</string>

    <!-- COLORS METRO -->
    <string name="metro_1">#ff507b</string>
    <string name="metro_2">#145ea9</string>
    <string name="metro_3">#c2cc29</string>
    <string name="metro_4">#28c7cc</string>
    <string name="metro_5">#f3ec26</string>
    <string name="metro_6">#ee0b0b</string>
    <string name="metro_7">#fa5a19</string>
    <string name="metro_8">#00a541</string>
    <string name="metro_9">#693601</string>
    <string name="metro_a">#913f92</string>
    <string name="metro_b">#c2c4c6</string>
    <string name="metro_12">#cac640</string>
    <!-- COLORS METRO BUS -->
    <string name="metrobus_1">#9F332C</string>
    <string name="metrobus_2">#863A90</string>
    <string name="metrobus_3">#86A03A</string>
    <string name="metrobus_4">#E8942D</string>
    <string name="metrobus_5">#06357C</string>
    <string name="metrobus_6">#E03C8E</string>
    <string name="metrobus_7">#097237</string>
    <!-- COLORS DEFAULT APPLICATION -->
    <string name="colorPrimary">#142582</string>
    <string name="colorPrimaryDark">#000E59</string>
    <string name="colorAccent">#FF0009</string>

    <string name="acceder_color">#000E59</string>
    <string name="layout_acceder">#FFFFFF</string>
    <string name="ubication_station_info">Ubicación</string>
    <string name="schedule_station_info">Horario</string>
    <string name="contact_station_info">Contacto</string>
    <string name="title_activity_lines">Lines</string>
    <string name="title_activity_stations">Estaciones</string>
    <string name="hello_user">Bienvenido</string>
    <string name="nav_main_lines">Líneas</string>
    <string name="you_need_a_nick">En Sübguey necesitamos que puedas identificarte con el resto de la comunidad. Escribe tú nombre de usuario.</string>
    <string name="nick_name">Nombre de usuario</string>
    <string name="log_in_message">Cuenta vinculada con la de Google para su registro.</string>
    <string name="txt_log_in">Acceder</string>
    <string name="text_events">¿Algo qué reportar?</string>
    <string name="cerrar_event">CERRAR</string>

    <string name="event_crime">DELITOS EN LOS ÁNDENES</string>
    <string name="event_natural">EVENTOS NATURALES</string>
    <string name="event_failure">FALLAS TÉCNICAS</string>
    <string name="event_by_user">FALLAS OCASIONADAS POR USUARIOS</string>
    <string name="event_accident">ACCIDENTES</string>
    <string name="title_progress_download">Espere un momento...</string>
    <string name="message_progress_download">Estamos generando su ruta, esto tardará un rato dependiendo de su conexión a internet</string>
    <string name="help_us">Al seleccionar un marcador de alguna estación tienes la posibilidad de ver información de la estación o bien generar una ruta desde tu posición actual. Elige la opción que necesites</string>
    <string name="send_me_here">Generar ruta</string>
    <string name="show_station_info">Ver información</string>
    <string name="gps_problems">Algo no va bien, asegurate de que el GPS está encendido o intentalo más tarde</string>
    <string name="login_please_wait">Se iniciará sesión, espere un momento porfavor...</string>
    <string name="event_sent">El reporte se ha realizado</string>
    <string name="accident_title">Accidente</string>
    <string name="crime_title">Crimen</string>
    <string name="failure_title">Falla técnica</string>
    <string name="natural_title">Evento natural</string>
    <string name="by_user_title">Falla por usuario(s)</string>
    <string name="failure_message">Se ha detectado una falla técnica la cual retrasará el viaje en esta línea. Tomar precauciones</string>
    <string name="accident_message">Ha ocurrido un accidente el cual retrasará el viaje en esta línea. Tomar precauciones</string>
    <string name="crime_message">Ha ocurrido un crimen el cual retrasará el viaje en esta línea. Tomar precauciones</string>
    <string name="by_user_message">Algún usuario está ocacionando que se retrase el viaje en esta línea. Tomar precauciones</string>
    <string name="attepting">Reintentando iniciar sesión, espere un momento porfavor...</string>
    <string name="not_null_username">El nombre de usuario no puede ir vacío</string>
    <string name="username_size">El nombre d eusuario debe tener almenos 5 caracteres</string>

</resources>
