<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="start"
            android:text="@string/text_events"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="282dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="180sp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="55sp"
                    android:layout_height="55sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5sp"
                    android:src="@mipmap/event_accident" />

                <Button
                    android:id="@+id/event_accident"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55sp"
                    android:gravity="left"
                    android:paddingTop="20sp"
                    android:text="@string/event_accident"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="59dp"
                    android:layout_height="55sp"
                    android:layout_gravity="center"
                    android:src="@mipmap/event_crime"/>

                <Button
                    android:id="@+id/event_crime"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55sp"
                    android:gravity="left"
                    android:paddingTop="20sp"
                    android:text="@string/event_crime"
                    android:textColor="#000000"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="59dp"
                    android:layout_height="55sp"
                    android:layout_gravity="center"
                    android:src="@mipmap/event_failure"/>

                <Button
                    android:id="@+id/event_failure"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55sp"
                    android:gravity="left"
                    android:paddingTop="20sp"
                    android:text="@string/event_failure"
                    android:textColor="#000000"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="59dp"
                    android:layout_height="55sp"
                    android:layout_gravity="center"
                    android:src="@mipmap/event_natural" />

                <Button
                    android:id="@+id/event_natural"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="55sp"
                    android:gravity="left"
                    android:paddingTop="20sp"
                    android:text="@string/event_natural"
                    android:textColor="#000000"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="59dp"
                    android:layout_height="55sp"
                    android:layout_gravity="center"
                    android:src="@mipmap/event_by_user"/>

                <Button
                    android:id="@+id/event_by_users"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingTop="10sp"
                    android:text="@string/event_by_user"
                    android:textColor="#000000"
                    />
            </LinearLayout>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/BTN_close_events"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/cerrar_event"
        android:textColor="#5E9B21" />

</LinearLayout>