<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/content_nav_nick_alert"
                android:background="#FF5F17"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="#FFFFFF" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_help_circle" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/content_nav_nick_alert">

                <TextView
                    android:padding="7dp"
                    android:textSize="17dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_us" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:paddingLeft="5sp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_directions"/>

                    <Button
                        android:id="@+id/BTN_station_option_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:textColor="#000000"
                        android:text="@string/send_me_here"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:paddingLeft="5sp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_information"/>
                    <Button
                        android:id="@+id/BTN_station_option_show_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:textColor="#000000"
                        android:text="@string/show_station_info"/>
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/BTN_station_option_alert_i_got_it"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:padding="15dp"
                        android:gravity="right|bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/got_it"/>

                </LinearLayout>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>