<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/content_nav_nick_alert"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="#FFFFFF" />

            <TextView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/account_circle" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/content_nav_nick_alert">

            <TextView
                android:padding="7dp"
                android:textSize="17dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_need_a_nick" />

            <EditText
                android:id="@+id/TXT_nick_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="16dp"
                android:hint="@string/nick_name"
                android:inputType="text"
                android:selectAllOnFocus="false"
                android:singleLine="false" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/BTN_dialog_nick_alert"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:padding="15dp"
                    android:gravity="right|bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/got_it"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    </ScrollView>

</RelativeLayout>